[package]
name = "countchar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
spirv-std = { git = "https://github.com/rust-gpu/rust-gpu" }

[target."cfg(not(target_arch=\"spirv\"))".dependencies]
wgpu = { version = "23.0.1", features = ["spirv"] }
kernelcodegen_types = { path = "../../kernelcodegen/kernelcodegen_types/" }
